# Distributed-Systems

./: .gitignore  DS_Presentation.pptx  README.md  pyproject.toml
client/: client.py
coordinator/: coordinator_server.py
fileserver/: FileServer.py
input_data/: file_list.csv  input_dataset_005.txt  input_dataset_010.txt  input_dataset_013.txt  input_dataset_029.txt  input_dataset_031.txt  input_dataset_035.txt  input_dataset_039.txt
proto/: coordinator.proto  fileserver.proto
scripts/: coordinator.bat  fileserver.bat  worker.bat
