[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff]
exclude = ["generated/"]
